# multiverse-tooling

./: .gitignore  README.md  pyproject.toml
evaluation_datasets/hurricane/boba_multiverse/: after_execute.sh  template.R
evaluation_datasets/racial_discrimination/: (1) Bertrand Mullainathan - Getting data ready - 2015 02 18.do  (2) Bertrand Mullainathan - Descriptive Specification Curve.do  README.md  process_raw_data.py
evaluation_datasets/racial_discrimination/boba_multiverse/: after_execute.sh  multiverse_template.R  single_script.R  visualizer_config.json
evaluation_datasets/tax_induced_migration/: README.md  migration.dta  model uncertainty and robustness.do  process_raw_data.py
evaluation_datasets/tax_induced_migration/boba_multiverse/: boba_util.R  multiverse_template.R  single_script.R  visualizer_config.json
evaluation_datasets/union_wage/: README.md  nlsw88.dta  process_raw_data.py  read_data.ipynb  union_wage.csv
evaluation_datasets/union_wage/boba_multiverse/: multiverse_template.R  single_script.R  visualizer_config.json
notebooks/: graph_ast.ipynb
src/: aggregate_error.py  ast_diffs.py  ast_traverse.py  ast_viz.py  our_ydiff.py  universe_template_diffs.py  utils.py  viz_ast_graph.ipynb
src/boba/: adg.py  cli.py  codeparser.py  debug.py  decisionparser.py  parser.py  wrangler.py
src/boba/output/: csvmerger.py
src/gui/: README.md  __init__.py  monaco_diff.py  routes.py  routes_diff.py  routes_error.py  webapp.py
src/gui/resources/: example_config.js  monaco.html
src/gui/templates/: error_index.html  error_no_errors.html  index.html  warning.html  warning_no_errors.html
src/gumtree/main/: client.py  sequence_algorithms.py
src/gumtree/tests/: test_tree.py  (+12 more)
tutorial/: boba.md  boba_rules.md  tutorial.md
(+75 files in other folders)
