[tool.poetry]
name = "src"
version = "0.0.0"
description = ""
readme = "README.md"
authors = ["Ken Gu <ken.qgu@gmail.com>"]
packages = [
]


[tool.poetry.dependencies]
python = "3.8.13"
scipy = "^1.6.0"
six = "^1.12.0"
scikit-learn = "^1.1.1"
statsmodels = "^0.13.2"
graphviz = "^0.20"
ipykernel = "^6.15.0"
