[tool.poetry]
name = "src"
version = "0.0.0"
description = ""
readme = "README.md"
authors = ["Ken Gu <ken.qgu@gmail.com>"]
packages = [
]


[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.6.0"
six = "^1.12.0"
scikit-learn = "^1.1.1"
statsmodels = "^0.13.2"
graphviz = "^0.20"
ipykernel = "^6.15.0"
ydiff = "^1.2"
PyYAML = "^6.0"
astpretty = "^3.0.0"
tqdm = "^4.64.0"
aiofiles = "^0.8.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
line-profiler = "^3.5.1"
