[tool.poetry]
name = "src"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [""]
packages = [
]

[tool.poetry.scripts]
# command_name = module_for_handler : function_for_handler
boba = 'src.boba.cli:main'
bdebug = 'src.gui.webapp:main'


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "1.9.0"
six = "^1.12.0"
scikit-learn = "1.1.2"
statsmodels = "^0.13.2"
graphviz = "^0.20"
ipykernel = "^6.15.0"
ydiff = "^1.2"
PyYAML = "^6.0"
astpretty = "^3.0.0"
tqdm = "^4.64.0"
aiofiles = "^0.8.0"
click = "^8.1.3"
reportlab = "^3.6.11"
pqdict = "^1.1.1"
strsimpy = "^0.2.1"
pytest = "^7.1.2"
parso = "^0.8.3"
Flask = "^2.2.1"
tree-sitter = "^0.20.0"
string-grouper = "^0.6.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
line-profiler = "^3.5.1"
svglib = "^1.3.0"
radian = "^0.6.3"
matplotlib = "^3.5.3"
